# hosts-manager

./: .gitignore  Cargo.toml  LICENSE.md  README.md
assets/: icon.icns
src/: app.rs  db_manager.rs  dns_lookup.rs  host_manager.rs  main.rs  profile_view.rs
